--- a/amplify.yml
+++ b/amplify.yml
@@ -7,9 +7,6 @@ frontend:
     build:
       commands:
         - npm run build
-    test:
-      commands:
-        - npm run test
   artifacts:
     baseDirectory: build
     files:
@@ -17,3 +14,8 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+test:
+  phases:
+    test:
+      commands:
+        - npm run test
