Added preTest step to build config.

--- a/amplify.yml
+++ b/amplify.yml
@@ -16,6 +16,9 @@ frontend:
       - node_modules/**/*
 test:
   phases:
+    preTest:
+      commands:
+        - npm install
     test:
       commands:
         - npm run test
